--- a/VKLib/UnitTestProject/UnitTestProject.csproj
+++ b/VKLib/UnitTestProject/UnitTestProject.csproj
@@ -57,6 +57,7 @@
   <ItemGroup>
     <Compile Include="TestArrayExtension.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestIO.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
