string extenstion 추가.

--- a/VKLib/UnitTestProject/UnitTestProject.csproj
+++ b/VKLib/UnitTestProject/UnitTestProject.csproj
@@ -50,9 +50,6 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="VKLib">
-      <HintPath>..\VKLib\bin\Debug\VKLib.dll</HintPath>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="TestArrayExtension.cs" />
@@ -61,6 +58,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\VKLib\VKLib.csproj">
+      <Project>{bd2c1986-9c4f-4d82-8106-41e9a780d869}</Project>
+      <Name>VKLib</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
